# 490-virtual-piano

./: .gitignore  README.md
Controller/: BoundsDetector.py  Controller.txt  DepthProcessor.py  FindContours.py  FingerDetection.py  FingerDetector.py  FingerDetectorEvan.py  FingerMapper.py  FingerPositions.py  FrameType.py  KeyDetector.py  Kinect.py  KinectObjectStream.py  Main.py  MainKeys.py  ObjectDetection.py  PyKinect.py  WriteNotes.py  file.txt  find_contours.py  genImage.py  kinect_test.py  run.sh  stream_test.py  test.py
Controller/DepthCalibration/: DepthCalibrator.py
Controller/Kinect/: CMakeLists.txt  ImageCapture.cpp  ImageCapture.h  Kinect.py  SharedMemWrite  SharedMemWrite.cpp  SharedMemWrite.h  main.cpp  memkey.txt
View/: 490Flask.py  Dependencies.txt  NoteQueue.py  Notes.py  PlayNotes.py  ReadNotes.py
View/ImageDisplay/: DisplayImage.py
shape-detect/: detect_shapes.py  shapedetector.py
